Lite inspect code-fixar!